Gabi - Fixed zoom overflow on the left

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,7 @@ html {
 
 body {
 	font-family: $font-family;
+	overflow-x: hidden;
 }
 
 @media (max-width: 768px) {
